2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* counter.man: More semantic markup, less visual one.

2002-08-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* counter.tcl: Updated 'info exist' to 'info exists'.

2002-04-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* counter.man: Added doctools manpage.

2001-09-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* counter.tcl: Restricted export list to public API.
	  [456255]. Patch by Hemang Lavana
	  <hemanglavana@users.sourceforge.net>

2001-07-10  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* counter.tcl: Frink 2.2 run, fixed dubious code.

2001-07-09  Brent Welch <welch@panasas.com>

	* counter.test: Fixed histlog test

2001-06-21  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* counter.tcl: Fixed dubious code reported by frink.

2000-10-04  Brent Welch <welch@ajubasolutions.com>

	* counter.tcl: Fixed bug in counter::MergeDay

2000-10-03  Brent Welch <welch@ajubasolutions.com>

	* counter.tcl: Fixed bug in label format for daily graph.

2000-10-02  Brent Welch <welch@ajubasolutions.com>

	* NAME CHANGE from "stats" to "counter"
	* counter.tcl: Changed shading of histogram labels.

2000-10-02  Brent Welch <welch@ajubasolutions.com>

	* modules/stats/stats.tcl: Added stats::htmlHistDisplayRow
	so that the calling page could define the overall table structure.

2000-10-01  Brent Welch <welch@ajubasolutions.com>

	* modules/stats/stats.tcl: Fixed calculation of hourBase
	and minuteBase when secsPerMinute was not 60.

2000-09-23  Brent Welch <welch@ajubasolutions.com>

	* modules/stats/stats.tcl: Time-based histograms were
	not displaying the 23rd hour nor the 59th minute.

2000-09-22  Brent Welch <welch@ajubasolutions.com>

	* modules/stats/stats.tcl: Fixed initialization when the
	server starts in the 59'th minute.  The first after event
	was an hour too long, so the first hour of data didn't
	display correctly.
